--- a/android/TasksProject/Tasks Example/src/main/res/layout/activity_main.xml
+++ b/android/TasksProject/Tasks Example/src/main/res/layout/activity_main.xml
@@ -1,7 +1,12 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/container"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".MainActivity"
-    tools:ignore="MergeRootFrame" />
+    android:layout_height="match_parent">
+
+    <Button
+        android:id="@+id/buttonStart"
+        android:text="Start"
+        android:layout_height="wrap_content"
+        android:layout_width="wrap_content" />
+
+    </LinearLayout>
